    (Zheng Shao via namit)

    HIVE-366. testParse should not depend on a static field
    (Zheng Shao via namit)
    
    HIVE-433. Fixed union18 and union19 tests.
    (athusoo via johan)

    HIVE-324. Fix AccessControlException when loading data.
    (Ashish Thusoo via zshao)

    HIVE-442. Move the data before creating the partition.
    (Prasad Chakka via zshao)

Release 0.3.0 - Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-337. LazySimpleSerDe to support multi-level nested array, map, struct
    types. (zshao)

    HIVE-313. Add UDF date_add, date_sub, datediff. (zshao)

    HIVE-79. Print number of rows inserted to table(s).
    (Suresh Antony via zshao)

    HIVE-30. Hive Web User Interface. (Edward Capriolo via athusoo)

    HIVE-343. Include py packages for thrift service.
    (Raghotham Murthy via zshao)

    HIVE-299. Include php packages for thrift service.
    (Raghotham Murthy via zshao)

    HIVE-82 Support for building tarballs and javadocs
    (Ashish Thusoo via rmurthy)

  IMPROVEMENTS

    HIVE-132. Show table and describe results to be read via FetchTask.
    (Raghotham Murthy via zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-349. Fix TestCliDriver when there are test cases with no tasks.
    (Suresh Antony via zshao)

    HIVE-339. Fix count distinct in 1 map-reduce job with map side
    aggregation. (Namit Jain via zshao)

    HIVE-271. Move test-udfs creation to build-common in order to
    fix broken 0.17 build. (athusoo)
    
    HIVE-286. Use round(xxx,12) to make sure there is no precision
    matching problem in testCliDriver_udf7. (zshao via johan)    

    HIVE-327. Fix row counts printed in hive history to reflect the
    count of rows from the query in the session. (Suresh Anthony via athusoo)

    HIVE-334. Make union3 test output deterministic.
    (Joydeep Sen Sarma via athusoo)

    HIVE-320. Fix intermittent nullpointer exception in count(DISTINCT).
    (Namit Jain via athusoo)
